<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="conversion">Conversion</string>
    <string name="answer">answer</string>
    <string name="demo_text">DEMO TEXT</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="equal">=</string>
    <string name="clr">CLR</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="period">.</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="Demo">Demo</string>
    <string name="One">One</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="blank" />
    <string name="title_activity_tip_calculator">TipCalculator</string>
    <string name="textview">TextView</string>
    <string name="tip">Tip:\u0020</string>
    <string name="total">Total:\u0020</string>
    <string name="bill">Bill:\u0020</string>
    <string name="_5percent">Poor</string>
    <string name="_10percent">Fair</string>
    <string name="_15percent">Good</string>
    <string name="_20percent">Great</string>
    <string name="_25percent">Excellent</string>
    <string name="button_9">9</string>
    <string name="button_6">6</string>
    <string name="button_3">3</string>
    <string name="button_equal">=</string>
</resources>
