<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="helloworld.example.com.calculator.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:background="@android:color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:textIsSelectable="true"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/black"
                android:text="@string/_0"
                android:ems="10"
                android:textSize="60sp"
                android:id="@+id/textView"
                android:layout_weight="8"/>
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:id="@+id/numbers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/colorMatteBlack"

        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:layout_weight="1"
                android:text="@string/_7"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button7"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold"


                />

            <Button
                android:layout_weight="1"
                android:text="@string/_4"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/_1"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/period"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPeriod"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMatteBlack">


            <Button
                android:layout_weight="1"
                android:text="@string/_8"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button8"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold"
                />

            <Button
                android:layout_weight="1"
                android:text="@string/_5"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/_2"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/_0"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button0"
                android:background="@drawable/backgroundwithboarder"
                android:textSize="36sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="normal|bold" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <Button
                android:layout_weight="1"
                android:text="@string/_9"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button9"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="36sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/_6"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button6"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="36sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/_3"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="36sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/equal"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEqual"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="36sp"
                android:textStyle="normal|bold" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMatteBlack">


            <Button
                android:layout_weight="1"
                android:text="@string/clr"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonclr"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/divide"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDivide"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/multiply"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonMultiply"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/subtract"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSubtract"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <Button
                android:layout_weight="1"
                android:text="@string/add"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAdd"
                android:background="@drawable/backgroundwithboarder"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
