<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tip_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="helloworld.example.com.calculator.TipCalculatorFragment"
    tools:showIn="@layout/activity_tip_calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:text="@string/bill"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/textView2"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="36sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:text="@string/tip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/textView4"
            tools:ignore="NestedWeights"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="36sp" />

        <TextView
            android:text="@string/total"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/textView3"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textSize="36sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:numStars="5"
            android:id="@+id/ratingBar"
            android:clickable="true"
            android:progressTint="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:rating="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3.5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_weight="4"
            tools:ignore="NestedWeights">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
